# management_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_dind_coder.sh  index.html
dind_images/: start_dind.sh
dind_images/Coder/: Dockerfile  install_docker.sh  startup_coder.sh
scripts/: buildall.sh
src/: client.rs  command.rs  main.rs  types.rs
