[package]
name = "management_server"
version = "0.1.0"
authors = ["alex <hortinstein@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
crossterm = "*"
rand = "*"
docker_wrapper = { git = "https://github.com/replicatedu/docker_wrapper.git" }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic